# SimpleVidView

./: Cargo.toml  README.md  SimpleVidView.iss  build.rs  package.json  pnpm-lock.yaml
.cargo/: config.toml
src/: App.css  App.tsx  VideoCanvas.tsx  main.rs  renderer-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: fs-permission.json
src-tauri/src/: ffhelp.rs  lib.rs  main.rs  socket.rs
