[package]
name = "simplevidview"
version = "0.1.0"
description = "A Simple Video Player"
authors = ["JJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simplevidview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-websocket = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
image = "0.25.8"
tungstenite = "0.28.0"
futures-util = "0.3.31"
ffmpeg-next = "8.0.0"
urlencoding = "2.1.3"
mime_guess = "2.0.5"
http = "1.3.1"
http-range = "0.1.5"
percent-encoding = "2.3.2"
getrandom = "0.3.4"

