[package]
name = "simplevidview"
version = "0.1.0"
description = "A Simple Video Player"
authors = ["JJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simplevidview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-websocket = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-next = "8.0.0"
http = "1.3.1"
http-range = "0.1.5"
percent-encoding = "2.3.2"
getrandom = "0.3.4"
tauri-plugin-fs = "2.4.4"

